force-app/main/default/objects/Program_Volunteer__c/Program_Volunteer__c.object-meta.xml
<CustomObject>
    <description>List of volunteer in each program and related attributes.</description>
    <label>Program Volunteer</label>
    <nameField>
        <displayFormat>PV{00000000}</displayFormat>
        <label>Program Volunteer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Volunteers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>