force-app/main/default/objects/Program_Volunteer__c/fields/Annual_Certification_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>Annual_Certification_Requirements_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically checked once this volunteer has completed the current year&#39;s annual certification requirements.</description>
    <inlineHelpText>This field is automatically checked once this volunteer has completed the current year&#39;s annual certification requirements.</inlineHelpText>
    <label>Annual Certification Requirements Met</label>
    <type>Checkbox</type>
</CustomField>