force-app/main/default/objects/Program_Volunteer__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Original date prospect submitted application to volunteer.</description>
    <inlineHelpText>Original date prospect submitted application to volunteer.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>