force-app/main/default/objects/Program_Volunteer__c/fields/Assignment_Ended_Reason__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Ended_Reason__c</fullName>
    <label>Assignment Ended Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Leave of Absence</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Emeritus</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Referred to Another Program</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Relocated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>