force-app/main/default/objects/Program_Volunteer__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Additional program specific comments about a contact. Comments can be viewed by anyone with access to record.</description>
    <inlineHelpText>Enter any additional program specific comments about a contact.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>