force-app/main/default/objects/Program_Volunteer__c/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>Candidate&#39;s date of interview.</description>
    <inlineHelpText>If applicable, enter the scheduled interview date for this candidate.</inlineHelpText>
    <label>Interview Date</label>
    <type>Date</type>
</CustomField>