force-app/main/default/objects/Program_Volunteer__c/fields/Lifetime_Course_Count__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Course_Count__c</fullName>
    <formula>VMIS_Course_Count__c +  VTM_Course_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LIFETIME Course Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>