force-app/main/default/objects/Program_Volunteer__c/fields/Lifetime_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Hours__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Total number of hours volunteered for this program.</description>
    <inlineHelpText>Total number of hours volunteered for this program.</inlineHelpText>
    <label>Lifetime Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>