force-app/main/default/objects/Program_Volunteer__c/fields/LOA_Suspension_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LOA_Suspension_Start_Date__c</fullName>
    <inlineHelpText>If volunteer is on a Leave of Absence (LOA) or Suspension status, enter the absence start date.</inlineHelpText>
    <label>LOA/Suspension Start Date</label>
    <type>DateTime</type>
</CustomField>