force-app/main/default/objects/Program_Volunteer__c/fields/Net_Years_Served__c.field-meta.xml
<CustomField>
    <fullName>Net_Years_Served__c</fullName>
    <description>Sum of the time spent in Active status (Both Candidate and Approved Volunteer Assignments) excluding any overlapping time if multiple Volunteer Assignments.</description>
    <inlineHelpText>Total time spent as an active volunteer with this program based on Volunteer Assignment start and end dates. Gaps in service between active assignments are not counted.</inlineHelpText>
    <label>Net Years Served</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>