force-app/main/default/objects/Program_Volunteer__c/fields/Net_Years_Served_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Net_Years_Served_Adjustment__c</fullName>
    <description>Historical time spent as an active volunteer.</description>
    <inlineHelpText>For volunteers with missing historical assignments, enter additional accrued time spent as an active volunteer.</inlineHelpText>
    <label>Net Years Served Adjustment</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>