force-app/main/default/objects/Program_Volunteer__c/fields/Other_Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Termination_Reason__c</fullName>
    <description>This field is required if &quot;Other&quot; is selected for Dismissal Reason.  Provide those additional details here (this field does not apply for Driver Safety).</description>
    <inlineHelpText>This field is required if &quot;Other&quot; is selected for Dismissal Reason.  Provide those additional details here (this field does not apply for Driver Safety).</inlineHelpText>
    <label>Other Dismissal Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>