force-app/main/default/objects/Program_Volunteer__c/fields/Position_Type_Desired__c.field-meta.xml
<CustomField>
    <fullName>Position_Type_Desired__c</fullName>
    <description>Types of position(s) a prospect is interested in for this program.</description>
    <inlineHelpText>I am interested in the following positions:</inlineHelpText>
    <label>Position Type Desired</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Classroom Administrative Assistance</fullName>
            </value>
            <value>
                <fullName>Communications / Social Media</fullName>
            </value>
            <value>
                <fullName>Community Activities</fullName>
            </value>
            <value>
                <fullName>Computers &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Course Instruction</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Data/Analytics</fullName>
            </value>
            <value>
                <fullName>Event Planning</fullName>
            </value>
            <value>
                <fullName>Fundraising/Grant Writing</fullName>
            </value>
            <value>
                <fullName>Influencing Lawmakers &amp; Others</fullName>
            </value>
            <value>
                <fullName>Leadership Roles</fullName>
            </value>
            <value>
                <fullName>Management/Supervision</fullName>
            </value>
            <value>
                <fullName>Marketing/Outreach</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Public Speaking / Discussion Leader</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Tax Preparation (Personal)</fullName>
            </value>
            <value>
                <fullName>Tax Preparation (Professional)</fullName>
            </value>
            <value>
                <fullName>Tech Assistance</fullName>
            </value>
            <value>
                <fullName>Training/Presentation</fullName>
            </value>
            <value>
                <fullName>Tutoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>