force-app/main/default/objects/Program_Volunteer__c/fields/Preferred_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Zip_Code__c</fullName>
    <description>Preferred zip code for volunteering outside immediate area.</description>
    <label>Preferred Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>