force-app/main/default/objects/Program_Volunteer__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>This is a master-detail relationship to the Program object.</description>
    <inlineHelpText>Use this field to associate a volunteer to an enterprise level program.</inlineHelpText>
    <label>Program</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value must be an enterprise level program.</errorMessage>
        <filterItems>
            <field>Program__c.Enterprise_Level_Program__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Volunteers</relationshipLabel>
    <relationshipName>Program_Volunteers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>