force-app/main/default/objects/Program_Volunteer__c/fields/Program_Entry_Source__c.field-meta.xml
<CustomField>
    <fullName>Program_Entry_Source__c</fullName>
    <description>Entry source for how contact was created in system for this program.</description>
    <inlineHelpText>Entry source for how contact was created in system for this program.</inlineHelpText>
    <label>Program Entry Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual Entry</fullName>
                <default>true</default>
                <label>Manual Entry</label>
            </value>
            <value>
                <fullName>General Intake Form</fullName>
                <label>Volunteer Interest Form</label>
            </value>
            <value>
                <fullName>Driver Safety Application</fullName>
            </value>
            <value>
                <fullName>Driver Safety Course Registration</fullName>
            </value>
            <value>
                <fullName>Experience Corps Intake Form</fullName>
            </value>
            <value>
                <fullName>States Leadership Application</fullName>
                <label>States Volunteer Application</label>
            </value>
            <value>
                <fullName>State Office</fullName>
            </value>
            <value>
                <fullName>Tax-Aide Application</fullName>
            </value>
            <value>
                <fullName>Volunteer Wizard</fullName>
            </value>
            <value>
                <fullName>Volunteer Opportunity Board</fullName>
            </value>
            <value>
                <fullName>Headquarters</fullName>
            </value>
            <value>
                <fullName>AARP Web Site</fullName>
            </value>
            <value>
                <fullName>Life Reimagined Application</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>