force-app/main/default/objects/Program_Volunteer__c/fields/Program_Route_To__c.field-meta.xml
<CustomField>
    <fullName>Program_Route_To__c</fullName>
    <description>Program specific Routing Table values.</description>
    <formula>IF(CONTAINS( Program__r.Name, &quot;Driver Safety&quot;) , Route_To__r.Driver_Safety_Route_To__c, 
IF(CONTAINS(Program__r.Name, &quot;Tax-Aide&quot;) , Route_To__r.Tax_Aide_Route_To__c , 
IF(CONTAINS(Program__r.Name, &quot;Chapters&quot;) , Route_To__r.Chapters_Route_To__c ,
IF(CONTAINS(Program__r.Name, &quot;Experience Corps&quot;) , Route_To__r.Experience_Corps_Route_To__c , 
IF(CONTAINS(Program__r.Name, &quot;States&quot;) , Route_To__r.States_Route_To__c,
IF(CONTAINS(Program__r.Name, &quot;Life Reimagined&quot;) , Route_To__r.Life_Reimagined_Route_to__c,NULL)
)))))</formula>
    <inlineHelpText>Program specific routing data for zip code provided in Route To field.</inlineHelpText>
    <label>Program Route To</label>
    <type>Text</type>
</CustomField>