force-app/main/default/objects/Program_Volunteer__c/fields/Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Start_Date__c</fullName>
    <description>Defines the date on which the volunteer started volunteering with a program.</description>
    <inlineHelpText>The date on which this volunteer began working with your program.</inlineHelpText>
    <label>Program Start Date</label>
    <type>Date</type>
</CustomField>