force-app/main/default/objects/Program_Volunteer__c/fields/PV_Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>PV_Migration_Key__c</fullName>
    <description>External Identifier that links migrated data to it&#39;s source in VMIS.</description>
    <externalId>true</externalId>
    <label>PV Migration Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>