force-app/main/default/objects/Program_Volunteer__c/fields/Qualifications_Summary__c.field-meta.xml
<CustomField>
    <fullName>Qualifications_Summary__c</fullName>
    <description>Candidate&#39;s qualification summary for this position.</description>
    <inlineHelpText>Please summarize the qualifications and experience that you would bring to this position.</inlineHelpText>
    <label>Qualifications Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>