force-app/main/default/objects/Program_Volunteer__c/fields/Reason_for_Volunteering__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Volunteering__c</fullName>
    <description>Explanation of why a prospect is interested in volunteering.</description>
    <inlineHelpText>Please briefly explain why you are interested in volunteering with AARP.</inlineHelpText>
    <label>Reason for Volunteering</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>