force-app/main/default/objects/Program_Volunteer__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <description>The referral source through which a volunteer was introduced to a particular AARP volunteer program.</description>
    <inlineHelpText>How did the prospect or volunteer hear about this volunteer program?</inlineHelpText>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AARP.org</fullName>
            </value>
            <value>
                <fullName>AARP Authorized to Offer Agent</fullName>
            </value>
            <value>
                <fullName>AARP Bulletin</fullName>
            </value>
            <value>
                <fullName>AARP Eblast</fullName>
            </value>
            <value>
                <fullName>AARPFoundation.org</fullName>
            </value>
            <value>
                <fullName>AARP Social Media</fullName>
            </value>
            <value>
                <fullName>AARP Staff</fullName>
            </value>
            <value>
                <fullName>AARP State Office</fullName>
            </value>
            <value>
                <fullName>AARP State Organization</fullName>
            </value>
            <value>
                <fullName>AARP Tax-Aide Volunteer</fullName>
            </value>
            <value>
                <fullName>AARP The Magazine</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>African-American Media</fullName>
            </value>
            <value>
                <fullName>Agency Website</fullName>
            </value>
            <value>
                <fullName>Another AARP Volunteer</fullName>
            </value>
            <value>
                <fullName>ASCEND</fullName>
            </value>
            <value>
                <fullName>Asian-American/Pacific Islander Media</fullName>
            </value>
            <value>
                <fullName>Attended an AARP Driver Safety Course</fullName>
            </value>
            <value>
                <fullName>Colleges and Universities Lifelong Learning</fullName>
            </value>
            <value>
                <fullName>Craigslist</fullName>
            </value>
            <value>
                <fullName>Create the Good</fullName>
            </value>
            <value>
                <fullName>Cuban National Council (CNC)</fullName>
            </value>
            <value>
                <fullName>Eblast from paid media source</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Florida International University</fullName>
            </value>
            <value>
                <fullName>Google Ad/Internet</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Hispanic/Latino Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>