force-app/main/default/objects/Program_Volunteer__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Used to capture the reason for declining a volunteer.</description>
    <inlineHelpText>Select the reason that most closely matches why this volunteer was declined by your program.</inlineHelpText>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Stopped Responding or No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Declined Background/Reference Check</fullName>
            </value>
            <value>
                <fullName>Did Not Complete/Pass Training or Certification</fullName>
            </value>
            <value>
                <fullName>Poor Communication Skills Displayed During Interview</fullName>
            </value>
            <value>
                <fullName>Not Interested Without Compensation</fullName>
            </value>
            <value>
                <fullName>Did Not Meet Age Requirement</fullName>
            </value>
            <value>
                <fullName>No Position Currently Available</fullName>
            </value>
            <value>
                <fullName>Lacked Access to Technology</fullName>
            </value>
            <value>
                <fullName>Skills/Experience Do Not Match Volunteer Role</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Age Requirement</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>