force-app/main/default/objects/Program_Volunteer__c/fields/Route_To__c.field-meta.xml
<CustomField>
    <fullName>Route_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to route (or re-route) prospects to the appropriate program for recruitment process.  Value derived from Routing_Table object.</description>
    <inlineHelpText>Search for routing indicator to route (or re-route) prospects to the appropriate program for recruitment process.</inlineHelpText>
    <label>Zip Code Route To</label>
    <referenceTo>Routing_Table__c</referenceTo>
    <relationshipLabel>Program Volunteers</relationshipLabel>
    <relationshipName>Program_Volunteers</relationshipName>
    <type>Lookup</type>
</CustomField>