force-app/main/default/objects/Program_Volunteer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current volunteer status of the contact associated with this record.</description>
    <inlineHelpText>Volunteer&#39;s overall program standing. To end an assignment, you must first enter an end date or update the status on the assignment record. The Program Volunteer status will then automatically update to Assignment Ended.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Assignment Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>