force-app/main/default/objects/Program_Volunteer__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <description>Dismissal reason.</description>
    <inlineHelpText>(This field does not apply to Driver Safety) If status = dismissed, select the most appropriate dismissal reason.  If you select &quot;other&quot; as the dismissal reason, please provide additional details in &quot;Other Dismissal Reasons&quot; field.</inlineHelpText>
    <label>Dismissal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Assignment_Ended_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Violation of AARP Volunteer Policies</fullName>
            </value>
            <value>
                <fullName>Violation of Program Volunteer Policies</fullName>
            </value>
            <value>
                <fullName>Engaging Publicly in Partisan Activity</fullName>
            </value>
            <value>
                <fullName>Difference of Opinion on AARP Policies</fullName>
            </value>
            <value>
                <fullName>Inconsistent Timeliness or Attendance</fullName>
            </value>
            <value>
                <fullName>Legal/Unlawful Issues</fullName>
            </value>
            <value>
                <fullName>Unable to Perform Requested Activities</fullName>
            </value>
            <value>
                <fullName>Violation of IRS SoC (Tax-Aide Only)</fullName>
            </value>
            <value>
                <fullName>Not Accepting of Retraining/Redirection</fullName>
            </value>
            <value>
                <fullName>Inactive/Cannot Be Contacted</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>