force-app/main/default/objects/Program_Volunteer__c/fields/VMIS_Participant_Count__c.field-meta.xml
<CustomField>
    <fullName>VMIS_Participant_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Participant Count through 2011</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>