force-app/main/default/objects/Program_Volunteer__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <description>This is a master-detail relationship to the contact object.</description>
    <inlineHelpText>Use this field to associate a volunteer to a volunteer program.</inlineHelpText>
    <label>Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Volunteer</relationshipLabel>
    <relationshipName>Program_Volunteers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>