force-app/main/default/objects/Program_Volunteer__c/fields/VTM_Course_Count__c.field-meta.xml
<CustomField>
    <fullName>VTM_Course_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Course Count 2012-Present</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>