force-app/main/default/objects/Program_Volunteer__c/fields/Years_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Years_Of_Service__c</fullName>
    <description>Captures a volunteer&#39;s years of service with a program.</description>
    <inlineHelpText>Total time that has passed from the volunteer&#39;s start date with this program to either (1) the end date of their last active Volunteer Assignment, or (2) today, if the volunteer is currently active with this program.</inlineHelpText>
    <label>Years Of Service</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>