force-app/main/default/objects/Program_Volunteer__c/fields/YTD_Hours__c.field-meta.xml
<CustomField>
    <fullName>YTD_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total year-to-date (YTD) number of hours volunteered for this program.</description>
    <inlineHelpText>Total year-to-date (YTD) number of hours volunteered for this program.</inlineHelpText>
    <label>YTD Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>