force-app/main/default/objects/Program_Volunteer__c/validationRules/Deceased_Status_Cannot_Be_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Deceased_Status_Cannot_Be_Selected</fullName>
    <active>false</active>
    <description>Prevent staff and volunteer leaders from being able to select Deceased status. Only sys admins can select Deceased status.</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Status__c, &quot;Deceased&quot;), 
ISBLANK(TEXT(Volunteer__r.Death_Notification_Date__c )),  
NOT(CONTAINS($Profile.Name, &quot;System Administrator&quot;))
)</errorConditionFormula>
    <errorMessage>Status can be changed to Deceased only by authorized users. Please contact a staff member if this volunteer  is deceased so that they can update the contact record appropriately.</errorMessage>
</ValidationRule>