force-app/main/default/objects/Program_Volunteer__c/validationRules/Deceased_Status_Editable_By_Sys_Admin.validationRule-meta.xml
<ValidationRule>
    <fullName>Deceased_Status_Editable_By_Sys_Admin</fullName>
    <active>true</active>
    <description>Deceased status is only editable by system administrator.</description>
    <errorConditionFormula>AND(
  TEXT(PRIORVALUE(Status__c)) = &quot;Deceased&quot;,
  ISCHANGED(Status__c),
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
 $Profile.Name &lt;&gt; &quot;System Integrator&quot; 
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Only system administrators can change status from deceased.</errorMessage>
</ValidationRule>