force-app/main/default/objects/Program_Volunteer__c/validationRules/Dismissal_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Dismissal_Date_Required</fullName>
    <active>true</active>
    <description>Dismissal Date required when Assignment Ended Reason = Dismissed.</description>
    <errorConditionFormula>AND(  
    ISPICKVAL(Assignment_Ended_Reason__c, &quot;Dismissed&quot;),
    ISNULL(Dismissal_Date__c ))</errorConditionFormula>
    <errorMessage>Dismissal Date is required if Assignment Ended Reason = Dismissed.</errorMessage>
</ValidationRule>